--- a/_config.yml
+++ b/_config.yml
@@ -22,17 +22,17 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "Profile.png"
-  name             : "Jing YAN"
+  name             : "Jing YAN（闫静）"
   pronouns         : # example: "she/her"  
   bio              : "A designer with a product mindset"
-  location         : "China"
+  location         : "China Guangzhou"
   employer         : 
   uri              :
   email            : "jingyancn01@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
   orcid            : "http://orcid.org/yourorcidurl"
   semantic         : # URL
